--- a/src/index.css
+++ b/src/index.css
@@ -18,3 +18,13 @@ body {
 @theme {
   --font-aeonik: 'Aeonik';
 }
+
+/* Hide scrollbar for image slider */
+.scrollbar-hide {
+  -ms-overflow-style: none;  /* Internet Explorer 10+ */
+  scrollbar-width: none;  /* Firefox */
+}
+
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;  /* Safari and Chrome */
+}
