feat: moreinfo-about

--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,13 @@
   font-style: normal;
   font-display: swap;
 }
+@font-face {
+  font-family: 'Aeonik';
+  src: url('../src/assets/fonts/AeonikTRIAL-Bold.otf') format('opentype');
+  font-weight: 900;
+  font-style: normal;
+  font-display: swap;
+}
 body {
   margin: 0;
   background-color: #000000;
