fix: fonts & about

--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,14 @@
 :root {
   font-family: inter; 
 }
+
+/* Inter Font Face Declarations */
+@font-face {
+  font-family: 'Inter';
+  src: url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
+  font-display: swap;
+}
+
 @font-face {
   font-family: 'Aeonik';
   src: url('../src/assets/fonts/AeonikTRIAL-Regular.otf') format('opentype');
@@ -24,6 +32,7 @@ body {
 
 @theme {
   --font-aeonik: 'Aeonik';
+  --font-inter: 'Inter', sans-serif;
 }
 
 /* Hide scrollbar for image slider */
